<resources>
    <string name="app_name">Payworks POS Demo</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="button00">00</string>
    <string name="buttondecimal">.</string>
    <string name="buttondelete">DELETE</string>
    <string name="buttonclear">CLEAR</string>
    <string name="buttonpay">PAY</string>
    <string name="buttonrefund">REFUND LAST TRANSACTION</string>
</resources>
