<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.chaz.payworksposdemo.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/amountfield"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Enter Amount"
        android:inputType="text"
        android:singleLine="false"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:columnCount="3"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountfield">

        <Button
            android:id="@+id/button1"
            android:text="@string/button1" />

        <Button
            android:id="@+id/button2"
            android:text="@string/button2" />

        <Button
            android:id="@+id/button3"
            android:text="@string/button3" />

        <Button
            android:id="@+id/button4"
            android:text="@string/button4" />

        <Button
            android:id="@+id/button5"
            android:text="@string/button5" />

        <Button
            android:id="@+id/button6"
            android:text="@string/button6" />

        <Button
            android:id="@+id/button7"
            android:text="@string/button7" />

        <Button
            android:id="@+id/button8"
            android:text="@string/button8" />

        <Button
            android:id="@+id/button9"
            android:text="@string/button9" />

        <Button
            android:id="@+id/button0"
            android:text="@string/button0" />

        <Button
            android:id="@+id/button00"
            android:text="@string/button00" />

        <Button
            android:id="@+id/buttondecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttondecimal" />

        <Button
            android:id="@+id/buttonclear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonclear" />

        <Button
            android:id="@+id/buttondelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="4"
            android:text="@string/buttondelete" />


    </GridLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="$"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/amountfield"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:text="© Chaz Hernandez 2017"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/buttonpay"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="PAY"
        android:textColor="@color/mpu_transaction_state_approved"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.421" />

    <Button
        android:id="@+id/buttonrefund"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:maxWidth="1dp"
        android:text="REFUND LAST TRANS"
        android:textColor="@color/mpu_transaction_state_declined_aborted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.421" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_end="180dp" />

</android.support.constraint.ConstraintLayout>
